# multi-sensor-safety-monitor

./: .gitignore  ARCHITECTURE_DESIGN.md  ARCHITECTURE_FLOW.md  CAPTURE_CHECKLIST.md  CMakeLists.txt  Makefile  PROGRESS_REPORT.md  QUICK_START_TESTING.md  README.md  SERVER_COMPARISON.md  TESTING.md  TEST_GUIDE.md  TEST_RESULTS.md  TEST_STATUS.md  VIEW_LOGS.md  c_build_guide.py  pytest.ini  sdkconfig  sdkconfig.defaults
.github/workflows/: test.yml
LLM/: README.md  summarizer.py  voice_summary_assistant.py
LLM/Qt_LLM_Monitor/: hi1.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  websocketserver.cpp  websocketserver.h
Models/: yolov10_node.py  yolov10n.json
Models/Scripts/: CMakeLists.txt  detector.hpp  lidar_cam_calib.py  lidar_ex_calib_velodyne.py  ros_async_yolo.py  run_detector.cpp  yolov10_node.py  yolov8n_realtime_example.json
Server/: README.md
Server/logintest/: CMakeLists.txt  main.cpp
Server/logintest/qml/: AppWindow.qml  DashboardPage.qml  GaugeView.qml  NavigationButton.qml
Server/mqtttest/: CMakeLists.txt  backend.h  main.cpp
Server/mqtttest/qml/: AppWindow.qml  Main.qml
Server/qtproject/: CMakeLists.txt  accounts.json  backend.cpp  backend.h  main.cpp
Server/qtproject/images/: resources.qrc
Server/qtproject/qml/: AnalysisPage.qml  AppWindow.qml  DashboardPage.qml  LoginPage.qml  Main.qml  MapPage.qml  NavigationButton.qml
esp32-server/: QUICK_TEST.md  README.md  package-lock.json  package.json  server.js  start_server.bat
esp32-server/models/: index.js
esp32-server/public/: index.html
esp32-server/services/: database.js
main/: CMakeLists.txt  CODE_REVIEW.md  MODULARIZATION.md  README.md  app_main.c  buzzer_control.c  dht11_sensor.c  led_control.c  mqtt_manager.c  rgb_led_control.c  sensor_average.c  web_server.c  wifi_manager.c
main/include/: buzzer_control.h  config.h  dht11_sensor.h  led_control.h  led_control_internal.h  mqtt_manager.h  rgb_led_control.h  sensor_average.h  web_server.h  wifi_manager.h
main/test/: CMakeLists.txt  test_led_control.c  test_led_control_simple.c  unity_platform.c
tests/: test_integration.py
tools/: run_tests.bat  run_tests.sh
